[tool.poetry]
name = "glcli"
version = "0.1.7"
description = ""
authors = ["Christian Decker <decker@blockstream.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8"
grpcio = "^1.46.1"
protobuf = "^3.20.1"
gl-client = "^0.1"

[tool.poetry.dev-dependencies]
gl-client = { path = "../../libs/gl-client-py/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glcli = 'glcli.cli:cli'
