[package]
name = "getting-started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl-client = {path = "../../../libs/gl-client"}
rand = "*"
bip39 = { version = "*", features=["rand_core"] }
tokio = {version="1.29.1", features=["rt", "macros"]}
hex = "0.4.3"
runeauth = "0.1"
anyhow.workspace = true
