[package]
name = "gl-client-js"
version = "0.1.4"
license = "ISC"
edition = "2018"

[lib]
name = "gl_client_js"
crate-type = ["cdylib"]

[dependencies]
gl-client = { path = ".." }
tokio = "*"
log = "*"
env_logger = "*"
once_cell = "*"
tonic = "*"
prost = "0.8"
anyhow = "*"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-4", "channel-api"]
