[package]
name = "gl-client-py"
version = "0.1.0"
edition = "2018"

[lib]
name = "glclient"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
env_logger = "*"
gl-client = { path = ".." }
log = "*"
once_cell = "*"
prost = "*"
pyo3 = {version = "0.14.1", features = ["extension-module", "serde"]}
pyo3-asyncio = { version = "0.14", features = ["tokio-runtime"] }
tokio = "*"
tonic = "*"
