[package]
name = "gl-client-py"
version = "0.1.0"
edition = "2018"

[lib]
name = "glclient"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
bytes = "*"
env_logger = "*"
gl-client = { path = ".." }
hex = "*"
log = "*"
once_cell = "*"
prost = "0.8"
pyo3 = {version = "0.14.1", features = ["extension-module", "serde"]}
tokio = { version = "*", features = ["full"] }
tonic = { version = "^0.5", features = ["tls", "transport"] }
